Se han hecho cambios

--- a/NodeJS1/views/login.ejs
+++ b/NodeJS1/views/login.ejs
@@ -6,12 +6,12 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />		
 	</head>	
 	<body>	
-	<di>		
+	<div>		
 			<input type="text" name="username" id="username"  placeholder="Username"/>
 			<input type="password" name="password" id="password"  placeholder="Password"/>
 			<button type="submit" onclick="registrar()">Registrar</button> 
 			<button type="submit" onclick="login()">Ingresar</button> 
-		
+	</div>	
 		
 	<script type="text/javascript" src="js/login.js"></script>
 
